--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta charset="UTF-8" />
@@ -184,23 +183,22 @@
 
         <hr class="footer-line">
         <nav class="footer-nav ">
-          <ul class="footer-nav-list">
+        <ul class="footer-nav-list">
             <li class="footer-nav-item">
-              <a class="header__nav-link " href="#">О компании</a>
-            </li>
-            <li class="footer-nav-item">
-              <a class="footer-nav-link" href="#"> Каталог</a>
+              <a class="header__nav-link" href="head.html">О компании</a>
             </li>
             <li class="footer-nav-item">
-              <a class="footer-nav-link" href="#"> Сотрудничество</a>
+              <a class="footer-nav-link" href="light.html"> Каталог</a>
             </li>
             <li class="footer-nav-item">
-              <a class="footer-nav-link" href="#">Обратная связь</a>
+              <a class="footer-nav-link" href="specialists.html"> Сотрудничество</a>
             </li>
-            <li class="footer-nav-item ">
-              <a class="footer-nav-link" href="#">Контакты</a>
+            <li class="footer-nav-item">
+              <a class="footer-nav-link" href="feedback.html">Обратная связь</a>
             </li>
-
+            <li class="footer-nav-item">
+              <a class="footer-nav-link" href="contacts.html">Контакты</a>
+            </li>
           </ul>
 
           <a class="social" href="#">
