--- a/pages/nutrition.html
+++ b/pages/nutrition.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta charset="UTF-8" />
@@ -176,23 +175,23 @@
       </div>
       <hr class="footer-line">
       <nav class="footer-nav">
-        <ul class="footer-nav-list">
-          <li class="footer-nav-item">
-            <a class="header__nav-link" href="#">О компании</a>
-          </li>
-          <li class="footer-nav-item">
-            <a class="footer-nav-link" href="#"> Каталог</a>
-          </li>
-          <li class="footer-nav-item">
-            <a class="footer-nav-link" href="#"> Сотрудничество</a>
-          </li>
-          <li class="footer-nav-item">
-            <a class="footer-nav-link" href="#">Обратная связь</a>
-          </li>
-          <li class="footer-nav-item">
-            <a class="footer-nav-link" href="#">Контакты</a>
-          </li>
-        </ul>
+           <ul class="footer-nav-list">
+            <li class="footer-nav-item">
+              <a class="header__nav-link" href="head.html">О компании</a>
+            </li>
+            <li class="footer-nav-item">
+              <a class="footer-nav-link" href="light.html"> Каталог</a>
+            </li>
+            <li class="footer-nav-item">
+              <a class="footer-nav-link" href="specialists.html"> Сотрудничество</a>
+            </li>
+            <li class="footer-nav-item">
+              <a class="footer-nav-link" href="feedback.html">Обратная связь</a>
+            </li>
+            <li class="footer-nav-item">
+              <a class="footer-nav-link" href="contacts.html">Контакты</a>
+            </li>
+          </ul>
         <a class="social" href="#">
           <img src="../img/tg-red.svg" class="telegramm">
         </a>
